	PR c++/35138 	* parser.c (cp_parser_pseudo_destructor_name): If next tokens 	are not identifier :: ~, return before calling cp_parser_type_name.

* g++.dg/template/member8.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132298 138bc75d-0d04-0410-961f-82ee72b054a4